Fixed IE7 issue that prevented the browser from properly "landing" onto footnotes (forgot to copy IE7 "wb-invisible" overrides for DTs).

--- a/src/js/sass/footnotes-ie7.scss
+++ b/src/js/sass/footnotes-ie7.scss
@@ -6,6 +6,11 @@
 .ie7 {
 	.wet-boew-footnotes {
 		display: inline-block;
+		dl dt {
+			position:relative;
+			float:left;
+			margin-bottom:-1px;
+		}
 	}
 }
 
